syntax = "proto3";

package mavilan.myprotos.person;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "com.mavilan.grpc.person";
option java_outer_classname = "PersonProtoClass";

message Physical {
    double height = 1;
    double weight = 2;
}

message Person {

    enum Gender {
        GENDER_UNSPECIFIED = 0;
        GENDER_MALE = 1;
        GENDER_FEMALE = 2;
        GENDER_NON = 3;
    }

    string id = 1;
    string first_name = 2;
    string last_name = 3;
    int32 age = 4;
    Gender gender = 5;
    bool worker = 6;
    Physical physical = 7;
}

message PersonId {
    string id = 1;
}

message PersonList {
    repeated Person people = 1;
}

message PersonResponse {
    oneof person_response {
        PersonId person_id = 1;
        google.protobuf.BoolValue value = 2;
    }
}

service ManagePerson {
    rpc FindOnePerson(PersonId) returns (Person);
    rpc FindManyPerson(google.protobuf.Empty) returns (PersonList);

    rpc InsertOnePerson(Person) returns (PersonResponse);
    rpc UpdateOnePerson(Person) returns (PersonResponse);
    rpc DeleteOnePerson(PersonId) returns (PersonResponse);
}